--- a/src/main/resources/assets/voltcraft/lang/en_us.json
+++ b/src/main/resources/assets/voltcraft/lang/en_us.json
@@ -1,10 +1,15 @@
 {
   "comment1": "base metals/gems",
   "block.voltcraft.lead_block": "Block Of Lead",
+  "block.voltcraft.nickel_block": "Block Of Nickel",
+  "block.voltcraft.silver_block": "Block Of Silver",
+  "block.voltcraft.raw_lead_block": "Block Of Raw Lead",
   "comment2": "alloys",
   "block.voltcraft.bronze_block": "Block Of Bronze",
   "block.voltcraft.invar_block": "Block Of Invar",
   "block.voltcraft.steel_block": "Block Of Steel",
   "comment3": "gui",
-  "container.voltcraft.powered-furnace": "Powered Furnace"
+  "container.voltcraft.powered-furnace": "Powered Furnace",
+  "comment4": "machines",
+  "block.voltcraft.powered_furnace": "Powered Furnace"
 }
